# renderkind

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RENAME_NOTICE.md  md2html.py  pyproject.toml  requirements.txt
assets/css/: styles.css  themes.css
assets/js/: dropdown-widget.js  scripts.js
examples/: demo.md  example.md  example_YAML.md  example_no_headings.md  example_wiki.md
src/renderkind/: __init__.py  cli.py
src/renderkind/assets/js/: themePicker.js
src/renderkind/templates/: default_template.html
templates/: default_template.html
